@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Nov 2014; Ulrich Müller <ulm@gentoo.org> emacs-xwidget-24.4.9999.ebuild:
+  Merge changes from emacs-vcs.
+
 *emacs-xwidget-24.4.9999 (07 Jun 2014)
 
   07 Jun 2014; Ulrich Müller <ulm@gentoo.org> -emacs-xwidget-24.3.9999.ebuild,
